# Agentic_AI

AI driven development/FastAPI_helloworld/: .gitignore  README.md  main.py  pyproject.toml  test_main.py
AI driven development/MCP_handsOn/: README.md
AI driven development/ai_task_manager/: AGENTS.md  README.md  main.py  pyproject.toml
AI driven development/ai_task_manager/.antigravitycli/: 4cd43d02-3ac8-449b-bf67-ae28cfb72382.json
AI driven development/ai_task_manager/services/tasks_mcp/src/: models.py  server.py  storage.py
AI driven development/ai_task_manager/services/tasks_mcp/tests/: test_intents.py
AI driven development/ai_task_manager/specs/: implementation.md  mcp-server-architecture.md  tasks-tool-definitions.md
AI driven development/markdown/: README.md
AI driven development/personal skills/: README.md
AI driven development/study_system/: README.md
AI driven development/task_api/: README.md  database.py  database_model.py  main.py  model.py  pyproject.toml
AI driven development/task_api/frontend/: index.html  package-lock.json
AI driven development/task_api/frontend/src/: App.css  App.jsx  index.css
Agentic_AI_Python_Projects/: README.md
Agentic_AI_Python_Projects/07_Agent_Clones/: README.md  main.py  pyproject.toml
Agentic_AI_Python_Projects/07_basic_tracing/: README.md  main.py  pyproject.toml
Agentic_AI_Python_Projects/08_agentAs_tool/: README.md  main.py  pyproject.toml
Agentic_AI_Python_Projects/08_basic_handsoff/: README.md  hello.py  main.py  pyproject.toml
Agentic_AI_Python_Projects/5_dynamic_instruction/: README.md
(+36 files in other folders)
